--- a/example/config
+++ b/example/config
@@ -5,3 +5,8 @@ CONFIG_MODULES=(
 "github:puppetlabs/puppetlabs-firewall@1.6.x"
 "github:camptocamp/puppet-openssl"
 )
+HIERA_FORMAT="yaml"
+HIERA_FILES=(
+"github:JungleCatSoftware/CloudConfigs/example/hiera/example.yaml"
+"github:JungleCatSoftware/CloudConfigs/common/hiera/default.yaml"
+)
